# anchor-tray-app

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  stack.json  tsconfig.json
.github/workflows/: ci.yml
docs/: SUPERVISOR-STATE-2026-04-28.md
scripts/: publish-all.sh  start-stack.sh  stop-stack.sh
src/: cli.ts  index.html  supervisor.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
