[package]
name = "anchor-tray-app"
version = "0.1.0"
description = "Anchor system-tray companion — supervises anchor-backend + anchor-admin-backend + anchor-security with crash-restart and login autostart"
authors = ["anchor"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
